main: layout and overlap issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,8 +44,8 @@
 }
 
 .img-button {
-  width: 45px;
-  height: 45px;
+  width: 25px;
+  height: 25px;
 }
 
 .img-button:hover {
